# object_detection_route_planning

./: .gitignore  README.md  detect_udp.py  dockerRespaldo.sh  package.xml  setup.cfg  setup.py
config/: nav2_params.yaml
log/: latest_build
src/: data_conversion.py
src/log/: latest_build
src/yolov5_slam_nav/: data_conversion.py  listener_yolov5.py  map_updater.py  navigator.py  publish_map_odom_tf.py
src/yolov5_slam_nav/maps/: objects_db.json
