<?xml version="1.0"?>
<package format="3">
  <name>yolov5_slam_nav</name>
  <version>0.0.1</version>
  <description>Paquete de ROS 2 para integración de YOLOv5 con SLAM Toolbox y Nav2</description>
  <maintainer email="tu_email@example.com">Tu Nombre</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>socket</exec_depend>
  <exec_depend>json</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
